--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: EVATool Decision Log
+title: Divekit Roadmap
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  This is an Architecture Decision Log for EVATool, following Domain-Driven Design principles.
+  Anforderungssammlung für die Weiterentwicklung von Divekit
 baseurl:  # the subpath of your site, e.g. /blog
-url: "https://evatool.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://divekit.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
