--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,6 +1,9 @@
-SBE:
+sbe:
   nickname: Stefan Bente
   team:
-FKR:
+jin:
+  nickname: Jann Intveen
+  team:
+fkr:
   nickname: Fabian Krampe
   team:
