--- a/_data/people.yml
+++ b/_data/people.yml
@@ -22,3 +22,12 @@ mba:
 jlü:
   nickname: Jannis Lüchtefeld
   team: 4
+kru:
+  nickname: Kay Ruck
+  team: 1
+duz:
+  nickname: Deniz Uzun
+  team: 1
+ako:
+  nickname: Alexander Kosmehl
+  team: 1
