fixed commit error

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -35,7 +35,7 @@ ako:
   nickname: Alexander Kosmehl
   team: 1
 ngi:
-  nickname: Nathalie \
+  nickname: Nathalie Giessler
   team: 6
 fgr:
   nickname: Fabian Grüterich
