--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,11 @@ defaults:
       layout: "interview"
   - scope:
       path: ""
+      type: "functionalRequirements"
+    values:
+      layout: "functionalRequirement"
+  - scope:
+      path: ""
       type: "literatureReferences"
     values:
       layout: "literatureReference"
