--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,8 @@ collections:
     output: true
   workshops:
     output: true
+  useCases:
+    output: true
 
 
 defaults:
@@ -146,3 +148,13 @@ defaults:
       type: "workshops"
     values:
       layout: "workshop"
+  - scope:
+      path: ""
+      type: "personas"
+    values:
+      layout: "persona"
+  - scope:
+      path: ""
+      type: "useCases"
+    values:
+      layout: "useCase"
