--- a/_data/metadata.yml
+++ b/_data/metadata.yml
@@ -1,30 +1,45 @@
 functionalRequirement:
     sortField: "title"
+    prefix: "FR"
 goal:
     sortField: "title"
+    prefix: "G"
 interview:
     sortField: "date"
+    prefix: "I"
 literatureReference:
     sortField: "title"
+    prefix: "LR"
 nonFunctionalRequirement:
     sortField: "title"
+    prefix: "NFR"
 persona:
     sortField: "name"
+    prefix: "P"
 scenario:
     sortField: "title"
+    prefix: "SC"
 stakeholder:
     sortField: "name"
+    prefix: "SH"
 stakeholderRole:
     sortField: "name"
+    prefix: "SHR"
 survey:
     sortField: "subject"
+    prefix: "SV"
 systemContextElement:
     sortField: "title"
+    prefix: "SCE"
 useCase:
     sortField: "title"
+    prefix: "UC"
 useCaseDiagram:
     sortField: "title"
+    prefix: "UCD"
 userStory:
     sortField: "title"
+    prefix: "US"
 workshop:
     sortField: "goal"
+    prefix: "WS"
