--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-midnight
+#theme: jekyll-theme-midnight
+theme: minima
 plugins:
   - jekyll-feed
 
