added sentence numbering to scenarios, and enabled scenario display

--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,11 @@ defaults:
       layout: "persona"
   - scope:
       path: ""
+      type: "scenarios"
+    values:
+      layout: "scenario"
+  - scope:
+      path: ""
       type: "useCases"
     values:
       layout: "useCase"
