--- a/_data/metadata.yml
+++ b/_data/metadata.yml
@@ -26,7 +26,7 @@ nonFunctionalRequirement:
 persona:
     fullName: "Persona"
     sortField: "name"
-    prefix: "PERS"
+    prefix: "PRS"
     collection: "personas"
     stakeholderRoleRef:
         asString: "stakeholderRole"
@@ -38,21 +38,21 @@ review:
 scenario:
     fullName: "Szenario"
     sortField: "title"
-    prefix: "SCEN"
+    prefix: "SCN"
     collection: "scenarios"
     stakeholderRoleRef:
         asString: "stakeholderRole"
 stakeholder:
     fullName: "Stakeholder"
     sortField: "name"
-    prefix: "STK"
+    prefix: "ST"
     collection: "stakeholders"
     stakeholderRoleRef:
         asList: "stakeholderRole"
 stakeholderRole:
     fullName: "Stakeholder-Rolle"
     sortField: "name"
-    prefix: "STRO"
+    prefix: "STR"
     collection: "stakeholderRoles"
 survey:
     fullName: "Umfrage"
@@ -64,7 +64,7 @@ survey:
 systemContextElement:
     fullName: "Systemkontex-Element"
     sortField: "title"
-    prefix: "SYCO"
+    prefix: "SYC"
     collection: "systemContextElements"
 useCase:
     fullName: "Use Case"
@@ -77,7 +77,7 @@ useCase:
 useCaseDiagram:
     fullName: "Use-Case-Diagramm"
     sortField: "title"
-    prefix: "UCDIA"
+    prefix: "UCD"
     collection: "useCaseDiagrams"
 userStory:
     fullName: "User Story"
