add about me tza

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -20,7 +20,8 @@ hbu:
   aboutMe:
 tza:
   nickname: Taras Zaika
-  aboutMe:
+  aboutMe: >
+    Ich bin Studierende an der TH Köln und "AM" Kurs-Teilnehmer
 mba:
   nickname: Mert Barutcu
   aboutMe:
