--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ url: "https://divekit.github.io" # the base hostname & protocol for your site, e
 twitter_username: jekyllrb
 github_username:  jekyll
 
+teacherMode: true
+
 # Build settings
 #theme: jekyll-theme-midnight
 theme: minima
